Fix #74 map vault

--- a/src/main/resources/theme/style.css
+++ b/src/main/resources/theme/style.css
@@ -953,6 +953,17 @@
   -fx-border-width: 0;
 }
 
+
+/*******************************************************************************
+ *                                                                             *
+ * Pagination                                                                  *
+ *                                                                             *
+ ******************************************************************************/
+
+.pagination-control {
+  -fx-font-size: 1.5em;
+}
+
 /***************** Icon *****************/
 
 .icon {
