Reveal logs folder. Fixes #512. Reveal maps folder. Fixes #513. Reveal mods folder. Fixes #514.

--- a/src/main/resources/theme/main.fxml
+++ b/src/main/resources/theme/main.fxml
@@ -30,6 +30,10 @@
                                 <SeparatorMenuItem mnemonicParsing="false"/>
                                 <MenuItem disable="true" text="%menu.feedback"/>
                                 <SeparatorMenuItem mnemonicParsing="false"/>
+                                <MenuItem onAction="#onRevealLogFolder" text="%menu.revealLogFolder" />
+                                <MenuItem onAction="#onRevealMapFolder" text="%menu.revealMapFolder" />
+                                <MenuItem onAction="#onRevealModFolder" text="%menu.revealModFolder" />
+                                <SeparatorMenuItem mnemonicParsing="false"/>
                                 <MenuItem onAction="#onExitItemSelected" text="%menu.exit"/>
                             </items>
                             <styleClass>
