--- a/src/main/resources/theme/chat/chat.fxml
+++ b/src/main/resources/theme/chat/chat.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -25,13 +24,11 @@
         </Label>
       </children>
     </VBox>
-    <VBox fx:id="noOpenTabsContainer" alignment="CENTER" fillWidth="false" AnchorPane.bottomAnchor="0.0"
+    <VBox fx:id="openNewChannelContainer" alignment="CENTER" fillWidth="false" AnchorPane.bottomAnchor="0.0"
           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
       <children>
         <VBox>
           <children>
-            <Label styleClass="h2" text="%chat.noOpenChats"/>
-            <Separator prefWidth="300.0"/>
             <Label text="%chat.joinAChannel">
               <padding>
                 <Insets top="10.0"/>
